# rust-os

./: Cargo.toml  x86_64-rust_os.json  x86_64-rust_os.md
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  task.rs  vga_buffer.rs
src/allocator/: bump.rs  linked_list.rs
src/task/: simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
